--- a/SteamAppInfoParser/SteamAppInfoParser.csproj
+++ b/SteamAppInfoParser/SteamAppInfoParser.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
     <PackageReference Include="ValveKeyValue" Version="0.3.0.144" />
   </ItemGroup>
 
