--- a/SteamAppInfoParser/SteamAppInfoParser.csproj
+++ b/SteamAppInfoParser/SteamAppInfoParser.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
-    <PackageReference Include="ValveKeyValue" Version="0.3.0.144" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageReference Include="ValveKeyValue" Version="0.8.2.162" />
   </ItemGroup>
 
 </Project>
